--- a/index.html
+++ b/index.html
@@ -1,97 +1,28 @@
 ---
-title: GCWeb Jekyll website example
+title: working example of a content page with tabbed interface
 ---
 
 <p>Working example of a generic content page with tabbed interface </p>
 
 <h2>Minimum requirement</h2>
 <ul>
-  <li>Create a <code>_config.yml</code></li>
-  <li>Define a layout globally or per page</li>
+  <li>Create a content page with a tabbed interface</code></li>
+  <li>re-creating the issue locally with a working example using generic content and existing GCWeb and WET-BOEW examples. </li>
 </ul>
-
 <h2 id="cnt-wdth-lmtd">Section with limited width content</h2>
 <p>Add the CSS class name <code>.cnt-wdth-lmtd</code> to a sectioning element <code>&lt;section class="cnt-wdth-lmtd"&gt;...&lt;section&gt;</code> inside the main content of your page. More guidance are provided in the Content and IA specification.</p>
 <section class="cnt-wdth-lmtd">
 	<h3>Section example with limited width content</h3>
 	<p>Different example text. Different example text. Different example text. Different example text. Different example text. Different example text. Different example text. Different example text.</p>
 </section>
-
 <section>
 	<h2>Example 1</h2>
 	<p>With session storage to remember last tab viewed. (Default behaviour)</p>
 	<div class="wb-tabs">
-		<div class="tabpanels">
-			<details id="details-panel1">
-				<summary>Example 1</summary>
-				<p>
-				From time immemorial the Norsemen <a href="#details-panel3">Example 3</a> were among the most daring and
-				skilful mariners ever known. They built great wooden boats with tall,
-				sweeping bows and sterns. These ships, though open and without decks,
-				were yet stout and seaworthy. Their remains have been found, at times
-				lying deeply buried under the sand and preserved almost intact. One
-				such vessel, discovered on the shore of Denmark, measured 72 feet in
-				length. Another Viking ship, which was dug up in Norway, and which is
-				preserved in the museum at Christiania, was 78 feet long and 17 feet
-				wide. One of the old Norse sagas, or stories, tells how King Olaf
-				Tryggvesson built a ship, the keel of which, as it lay on the grass,
-				was 74 ells long; in modern measure, it would be a vessel of about 942
-				tons burden. Even if we make allowance for the exaggeration or
-				ignorance of the writer of the saga, there is still a vast contrast
-				between this vessel and the little ship Centurion in which Anson sailed
-				round the world.
-				</p>
-			</details>
-			<details id="details-panel2" open="open">
-				<summary>Example 2</summary>
-				<p>
-				It is needless, however, to prove that the Norsemen could have reached
-				America in their ships. The voyages from Iceland to Greenland which we
-				know they made continually for four hundred years were just as arduous
-				as a further voyage from Greenland to the coast of Canada.
-				</p>
-			</details>
-			<details id="details-panel3">
-				<summary>Example 3</summary>
-				<p>
-				The story of the Norsemen runs thus. Towards the end of the ninth
-				century, or nearly two hundred years before the Norman conquest, there
-				was a great exodus or outswarming of the Norsemen from their original
-				home in Norway. A certain King Harold had succeeded in making himself
-				supreme in Norway, and great numbers of the lesser chiefs or jarls
-				preferred to seek new homes across the seas rather than submit to his
-				rule. So they embarked with their seafaring followers—Vikings, as we
-				still call them—often, indeed, with their wives and families, in great
-				open ships, and sailed away, some to the coast of England, others to
-				France, and others even to the Mediterranean, where they took service
-				under the Byzantine emperors. But still others, loving the cold rough
-				seas of the north, struck westward across the North Sea and beyond the
-				coasts of Scotland till they reached Iceland. This was in the year 874.
-				Here they made a settlement that presently grew to a population of
-				fifty thousand people, having flocks and herds, solid houses of stone,
-				and a fine trade in fish and oil with the countries of Northern Europe.
-				These settlers in Iceland attained to a high standard of civilization.
-				They had many books, and were fond of tales and stories, as are all
-				these northern peoples who spend long winter evenings round the
-				fireside. Some of the sagas, or stories, which they told were true
-				accounts of the voyages and adventures of their forefathers; others
-				were fanciful stories, like our modern romances, created by the
-				imagination; others, again, were a mixture of the two. Thus it is
-				sometimes hard to distinguish fact and fancy in these early tales of
-				the Norsemen. We have, however, means of testing the stories. Among the
-				books written in Iceland there was one called the 'National Name-Book,'
-				in which all the names of the people were written down, with an account
-				of their forefathers and of any notable things which they had done.
-				</p>
-			</details>
-		</div>
-	</div>
-
-<div class="wb-tabs"></div>
 	<div class="tabpanels">
-		<details id="details-panel1">
-			<summary>Example 1</summary>
-			<p><h2>Large radio buttons target with explicit labels</h2>
+	<details id="details-panel1">
+	<summary>Example 1</summary>
+<p><h2>Large radio buttons target with explicit labels</h2>
 <fieldset class="gc-chckbxrdio">
 	<legend>Which is your favorite pet?</legend>
 	<ul class="list-unstyled lst-spcd-2">
@@ -109,56 +40,29 @@ title: GCWeb Jekyll website example
 		</li>
 	</ul>
 </fieldset>
-			</p>
-		</details>
-		<details id="details-panel2" open="open">
-			<summary>Example 2</summary>
-			<p> Different example text. Different example text....</p>
-		</details>
-		...
-	</div>
-
-	<p class="mrgn-tp-md"><a href="#details-panel3" class="wb-tabs-ext">Show the third panel</a></p>
+</p>
+<details id="details-panel2" open="open">
+<summary>Example 2</summary>
+  <p>
+<ul>
+  <li><a href="https://wet-boew.github.io/GCWeb/index-fr.html">Link 1</li>
+  <li> <a href="https://wet-boew.github.io/GCWeb/index-en.html">Link 2</li>
+</ul>
+</p>
+</details>
 </div>
-<h2>Site structure and minimalist content (With a default global layout)</h2>
-<dl>
-  <dt><code>_config.yml</code></dt>
-  <dd>
-    <pre><core># Remote theme, use the latest version
-remote_theme: wet-boew/gcweb-jekyll
-
-#
-# Page front matter defaults
-defaults:
-  - scope:
-      path: "" # Ensure it's applied to all pages
-    values:
-      layout: default</code></pre>
-  </dd>
-  <dt><code>index.html</code></dt>
-  <dd>
-    <pre><core>---
-title: GCWeb Jekyll website example
----
-
-&lt;p&gt;This is a simple website using the GCWeb Jekyll theme&lt;/p&gt;</code></pre>
-  </dd>
-</dl>
-
-<h2>Alternative site structure and minimalist content</h2>
-<dl>
-  <dt><code>_config.yml</code></dt>
-  <dd>
-    <pre><core># Remote theme, use the latest version
-remote_theme: wet-boew/gcweb-jekyll</code></pre>
-  </dd>
-  <dt><code>index.html</code></dt>
-  <dd>
-    <pre><core>---
+<details id="details-panel3">
+<summary>Example 3</summary>		
+<p>
+It is needless, however, to prove that the Norsemen could have reached
+America in their ships. The voyages from Iceland to Greenland which we
+know they made continually for four hundred years were just as arduous
+as a further voyage from Greenland to the coast of Canada.
+</p>
+</details>
+</div>
 title: GCWeb Jekyll website example
 layout: default
 ---
 
-&lt;p&gt;This is a simple page using the GCWeb Jekyll theme and testing the tabbed interface &lt;/p&gt;</code></pre>
-  </dd>
-</dl>
+
