--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: working example of a content page with tabbed interface
   <li>Create a content page with a tabbed interface</code></li>
   <li>re-creating the issue locally with a working example using generic content and existing GCWeb and WET-BOEW examples. </li>
 </ul>
+
 <section>
 <h2>Example 1</h2>
 <p>With session storage to remember last tab viewed. (Default behaviour)</p>
@@ -37,7 +38,7 @@ title: working example of a content page with tabbed interface
 </fieldset>
 </p>
 </details>
-<details id="details-panel2" open="open">
+<details id="details-panel2">
 <summary>Example 2</summary>
 <p>
 <ul>
@@ -46,13 +47,21 @@ title: working example of a content page with tabbed interface
 </ul>
 </p>
 </details>
-	</div>
-
-	<p class="mrgn-tp-md"><a href="#details-panel3" class="wb-tabs-ext">Show the third panel</a></p>
+<details id="details-panel3">
+<summary>Example 3</summary>
+<p>
+<ul>
+  <li>It is needless, however, to prove that the Norsemen could have reached America in their ships. <a href="https://wet-boew.github.io/gcweb-compiled-demos/wetboew-demos/tabs/tabs-en.html">Link 3</li>
+  <li>The voyages from Iceland to Greenland which we know they made continually for four hundred years were just as arduous as a further voyage from Greenland to the coast of Canada.<a href="https://wet-boew.github.io/gcweb-compiled-demos/wetboew-demos/tabs/tabs-fr.html">Link 4</li>
+</ul>
+</p>
+</details>	   
 </div>
+	
+<p class="mrgn-tp-md"><a href="#details-panel3" class="wb-tabs-ext">Show the third panel</a></p>
+</div>	
 </section>	
 title: GCWeb Jekyll website example
 layout: default
+Date modified: 2024-10-03
 ---
-
-
