--- a/index.html
+++ b/index.html
@@ -40,27 +40,23 @@ title: working example of a content page with tabbed interface
 </details>
 <details id="details-panel2">
 <summary>Example 2</summary>
-<p>
-<ul>
+<p><ul>
   <li><a href="https://wet-boew.github.io/GCWeb/index-fr.html">Link 1</li>
   <li> <a href="https://wet-boew.github.io/GCWeb/index-en.html">Link 2</li>
-</ul>
-</p>
+</ul></p>
 </details>
-<details id="details-panel3">
+<details id="details-panel3" class="wb-tabs-ext">
 <summary>Example 3</summary>
-<p>
+<p class="mrgn-tp-md">
 <ul>
-  <li>It is needless, however, to prove that the Norsemen could have reached America in their ships. <a href="https://wet-boew.github.io/gcweb-compiled-demos/wetboew-demos/tabs/tabs-en.html">Link 3</li>
-  <li>The voyages from Iceland to Greenland which we know they made continually for four hundred years were just as arduous as a further voyage from Greenland to the coast of Canada.<a href="https://wet-boew.github.io/gcweb-compiled-demos/wetboew-demos/tabs/tabs-fr.html">Link 4</li>
+  <li>It is needless, however, to prove that the Norsemen could have reached America in their ships.</li>
+  <li>The voyages from Iceland to Greenland which we know they made continually for four hundred years were just as arduous as a further voyage from Greenland.</li>
 </ul>
 </p>
 </details>	   
 </div>
 </div>	
 </section>	
----
-
 title: GCWeb Jekyll website example
 layout: default
 ---
