--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: working example of a content page with tabbed interface
 <p>
 <h2>Large radio buttons target with explicit labels</h2>
 <fieldset class="gc-chckbxrdio">
-<legend>Which is your favorite pet?</legend>
+<legend>Which is your favorite pet?<a href="#details-panel3">Example 3</a></legend>
 	<ul class="list-unstyled lst-spcd-2">
 		<li class="radio">
 			<input type="radio" name="animal" id="animal-1">
@@ -40,23 +40,24 @@ title: working example of a content page with tabbed interface
 </details>
 <details id="details-panel2">
 <summary>Example 2</summary>
-<p><ul>
+<p>
+<ul>
   <li><a href="https://wet-boew.github.io/GCWeb/index-fr.html">Link 1</li>
   <li> <a href="https://wet-boew.github.io/GCWeb/index-en.html">Link 2</li>
-</ul></p>
-</details>
-<details id="details-panel3" class="wb-tabs-ext">
-<summary>Example 3</summary>
-<p class="mrgn-tp-md">
-<ul>
-  <li>It is needless, however, to prove that the Norsemen could have reached America in their ships.</li>
-  <li>The voyages from Iceland to Greenland which we know they made continually for four hundred years were just as arduous as a further voyage from Greenland.</li>
 </ul>
+</p>
+</details>
+<details id="details-panel3">
+<summary>Example 3</summary>
+<p>
+It is needless, however, to prove that the Norsemen could have reached
+America in their ships. The voyages from Iceland to Greenland which we
+know they made continually for four hundred years were just as arduous
+as a further voyage from Greenland to the coast of Canada.
 </p>
 </details>	   
 </div>
-</div>	
+</div>
+<p class="mrgn-tp-md"><a href="#details-panel3" class="wb-tabs-ext">Show the third panel</a></p>
 </section>	
-title: GCWeb Jekyll website example
-layout: default
----
+
