--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@ as a further voyage from Greenland to the coast of Canada.
 </p>
 </details>	   
 </div>
-</div>
 <p class="mrgn-tp-md"><a href="#details-panel3" class="wb-tabs-ext">Show the third panel</a></p>
-</section>	
+</div>
+</section>
+<section class="pagedetails">
+	<h2 class="wb-inv">Page details</h2><dl id="wb-dtmd">
+	<dt>Date modified:</dt>
+	<dd><time property="dateModified">2015-10-03</time></dd>
+</dl>
+</section>
 
